#7219 Signature Pad is not Responsive on Mobile Screens - change styles and fix clear Fixes #7219

--- a/src/signaturepad.scss
+++ b/src/signaturepad.scss
@@ -1,5 +1,6 @@
 .sjs_sp_container {
     position: relative;
+    max-width: 100%;
 }
 .sjs_sp_controls {
     position: absolute;
@@ -33,6 +34,7 @@
     top: 0;
     left: 0;
     object-fit: cover;
+    max-width: 100%;
     width: 100%;
     height: 100%;
 }
